...
        topBar = {
            TopAppBar(
                title = { Text(text = stringResource(R.string.history)) },
                actions = {
                    IconButton(
                        onClick = actions.toggleFilter,
                        modifier = Modifier.testTag("FilterButton")
                    ) {
                        Icon(
                            imageVector = Icons.Filled.FilterList,
                            contentDescription = stringResource(R.string.filter_history)
                        )
                    }
...
                            else -> GridItemSpan(1)
                        }
                    }
                ) { index ->
                    when (val item = pagerState[index]) {
                        is HistoryItem.Data -> {
                            ImageDetectionCard(
                                imageDetection = item.value,
                                onClick = { actions.navigateToDetailImageDetection(item.value.id) },
                                modifier = Modifier
                                    .animateItemPlacement()
                                    .testTag("ImageDetectionCard")
                            )
...
